# polli

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-08-25-224553_initial_schema/: down.sql  up.sql
src/: command.rs  main.rs  models.rs  polls.rs  prompt.rs  schema.rs
src/cli/: args.rs  launch.rs  mod.rs
