[package]
name = "polli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.15", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.38"
