[package]
name = "polli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.15", features = ["derive"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v7"] }
